--- a/configure.in
+++ b/configure.in
@@ -64,9 +64,9 @@ AC_ARG_ENABLE(memory_manager,
         enable_memory_manager=no
 )
 
-AC_ARG_ENABLE(print_functions,
-    [  --enable-print-functions       enable printf functions in stand alone library [default=off]], ,
-        enable_print_functions=no
+AC_ARG_ENABLE(exceptions,
+    [  --enable-exceptions            enable exceptions in stand alone library [default=off]], ,
+        enable_exceptions=no
 )
 
 AC_ARG_ENABLE(string_functions,
@@ -133,8 +133,8 @@ if test x$enable_stand_alone = xyes; then
 	MEMORY_MANAGER_CFLAGS="-DENABLE_MEMORY_MANAGER"
     fi
 
-    if test x$enable_print_functions = xyes; then
-	PRINT_FUNCTIONS_CFLAGS="-DENABLE_PRINT_FUNCTIONS"
+    if test x$enable_exceptions = xyes; then
+	EXCEPTIONS_CFLAGS="-DENABLE_EXCEPTIONS"
     fi
 
     if test x$enable_string_functions = xyes; then
@@ -146,7 +146,7 @@ if test x$enable_stand_alone = xyes; then
     fi
 
     ALONE_CFLAGS="$ALONE_CFLAGS -Wl,-N -DENABLE_STAND_ALONE $MEMORY_MANAGER_CFLAGS \
-$PRINT_FUNCTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $LRU_FUNCTIONS_CFLAGS \ 
+$EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $LRU_FUNCTIONS_CFLAGS \ 
 -fno-builtin -malign-jumps=1 -malign-loops=1 -malign-functions=1"
 fi
 
