Cleanups related to stand alone mode.
(Logical change 1.33)

--- a/configure.in
+++ b/configure.in
@@ -145,7 +145,7 @@ if test x$enable_stand_alone = xyes; then
 	LRU_FUNCTIONS_CFLAGS="-DENABLE_LRU_FUNCTIONS"
     fi
 
-    ALONE_CFLAGS="$ALONE_CFLAGS -Wl,-N -DENABLE_STAND_ALONE $MEMORY_MANAGER_CFLAGS \
+    ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_STAND_ALONE $MEMORY_MANAGER_CFLAGS \
 $EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $LRU_FUNCTIONS_CFLAGS \ 
 -fno-builtin -malign-jumps=1 -malign-loops=1 -malign-functions=1"
 fi
