--- a/configure.in
+++ b/configure.in
@@ -102,6 +102,22 @@ AC_FUNC_MEMCMP
 AC_HEADER_STDC
 AC_CHECK_FUNCS([memmove memset strchr strerror strpbrk strrchr])
 
+# The options -falign-* are supported by gcc 3.0 or later.
+# Probably it is sufficient to only check for -falign-loops.
+AC_CACHE_CHECK([whether -falign-loops works], [falign_loop_flag], [
+  saved_CPPFLAGS="$CPPFLAGS"
+  CPPFLAGS="-falign-loops=1"
+  AC_TRY_COMPILE(, , [falign_loop_flag=yes], [falign_loop_flag=no])
+  CPPFLAGS="$saved_CPPFLAGS"
+])
+ 
+# Force no alignment to save space.
+if test "x$falign_loop_flag" = xyes; then
+  ALIGN_FLAGS="-falign-jumps=1 -falign-loops=1 -falign-functions=1"
+else
+  ALIGN_FLAGS="-malign-jumps=1 -malign-loops=1 -malign-functions=1"
+fi
+
 CFLAGS=""
 ALONE_CFLAGS=""
 GENERIC_CFLAGS=""
@@ -146,8 +162,7 @@ if test x$enable_stand_alone = xyes; then
     fi
 
     ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_STAND_ALONE $MEMORY_MANAGER_CFLAGS \
-$EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $LRU_FUNCTIONS_CFLAGS \ 
--fno-builtin -malign-jumps=1 -malign-loops=1 -malign-functions=1"
+$EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $LRU_FUNCTIONS_CFLAGS $ALIGN_FLAGS"
 fi
 
 if test x$enable_debug = xyes; then
