--- a/configure.in
+++ b/configure.in
@@ -74,6 +74,11 @@ AC_ARG_ENABLE(string_functions,
         enable_string_functions=no
 )
 
+AC_ARG_ENABLE(hash_functions,
+    [  --enable-hash-functions        enable hash table in stand alone library [default=off]], ,
+        enable_hash_functions=no
+)
+
 # Checks for programs.
 AC_PROG_CC
 
@@ -152,8 +157,12 @@ if test x$enable_stand_alone = xyes; then
 	STRING_FUNCTIONS_CFLAGS="-DENABLE_STRING_FUNCTIONS"
     fi
 
+    if test x$enable_hash_functions = xyes; then
+	HASH_FUNCTIONS_CFLAGS="-DENABLE_HASH_FUNCTIONS"
+    fi
+
     ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_STAND_ALONE $MEMORY_MANAGER_CFLAGS \
-$EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $ALIGN_FLAGS"
+$EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $HASH_FUNCTIONS_CFLAGS $ALIGN_FLAGS"
 fi
 
 if test x$enable_debug = xyes; then
