--- a/configure.in
+++ b/configure.in
@@ -14,7 +14,7 @@ AH_TEMPLATE([ENABLE_MEMORY_MANAGER], [Define for enable simple memory manager.])
 
 LIBAAL_MAJOR_VERSION=0
 LIBAAL_MINOR_VERSION=4
-LIBAAL_MICRO_VERSION=6
+LIBAAL_MICRO_VERSION=7
 
 LIBAAL_INTERFACE_AGE=0
 LIBAAL_BINARY_AGE=0
@@ -72,11 +72,6 @@ AC_ARG_ENABLE(exceptions,
 AC_ARG_ENABLE(string_functions,
     [  --enable-string-functions      enable strncpy and friends in stand alone library], ,
         enable_string_functions=no
-)
-
-AC_ARG_ENABLE(hash_functions,
-    [  --enable-hash-functions        enable hash table in stand alone library], ,
-        enable_hash_functions=no
 )
 
 # Checks for programs.
@@ -157,12 +152,8 @@ if test x$enable_stand_alone = xyes; then
 	STRING_FUNCTIONS_CFLAGS="-DENABLE_STRING_FUNCTIONS"
     fi
 
-    if test x$enable_hash_functions = xyes; then
-	HASH_FUNCTIONS_CFLAGS="-DENABLE_HASH_FUNCTIONS"
-    fi
-
     ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_STAND_ALONE $MEMORY_MANAGER_CFLAGS \
-$EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $HASH_FUNCTIONS_CFLAGS $ALIGN_FLAGS"
+$EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $ALIGN_FLAGS"
 fi
 
 if test x$enable_debug = xyes; then
