--- a/configure.in
+++ b/configure.in
@@ -64,11 +64,6 @@ AC_ARG_ENABLE(memory_manager,
         enable_memory_manager=no
 )
 
-AC_ARG_ENABLE(exceptions,
-    [  --enable-exceptions            enable exceptions in stand alone library], ,
-        enable_exceptions=no
-)
-
 AC_ARG_ENABLE(string_functions,
     [  --enable-string-functions      enable strncpy and friends in stand alone library], ,
         enable_string_functions=no
@@ -144,16 +139,12 @@ if test x$enable_stand_alone = xyes; then
 	MEMORY_MANAGER_CFLAGS="-DENABLE_MEMORY_MANAGER"
     fi
 
-    if test x$enable_exceptions = xyes; then
-	EXCEPTIONS_CFLAGS="-DENABLE_EXCEPTIONS"
-    fi
-
     if test x$enable_string_functions = xyes; then
 	STRING_FUNCTIONS_CFLAGS="-DENABLE_STRING_FUNCTIONS"
     fi
 
     ALONE_CFLAGS="$ALONE_CFLAGS -DENABLE_STAND_ALONE $MEMORY_MANAGER_CFLAGS \
-$EXCEPTIONS_CFLAGS $STRING_FUNCTIONS_CFLAGS $ALIGN_FLAGS"
+$STRING_FUNCTIONS_CFLAGS $ALIGN_FLAGS"
 fi
 
 if test x$enable_debug = xyes; then
