--- a/configure.in
+++ b/configure.in
@@ -155,18 +155,22 @@ if test x$enable_stand_alone = xyes; then
 $STRING_FUNCTIONS_CFLAGS $ALIGN_FLAGS"
 fi
 
+CFLAGS="$CFLAGS -W -Wall"
+
 if test x$enable_debug = xyes; then
-    GENERIC_CFLAGS="$GENERIC_CFLAGS -O1 -g"
-    ALONE_CFLAGS="$ALONE_CFLAGS -O1 -g"
+    GENERIC_CFLAGS="$GENERIC_CFLAGS -O0 -g"
+    ALONE_CFLAGS="$ALONE_CFLAGS -O0 -g"
 else
     GENERIC_CFLAGS="$GENERIC_CFLAGS -O2"
     ALONE_CFLAGS="$ALONE_CFLAGS -Os"
+
+    if test "x$uninitialized" = xyes; then
+       CFLAGS="$CFLAGS -Wuninitialized"
+    fi
 fi
 
 if test "x$uninitialized" = xyes; then
-    CFLAGS="$CFLAGS -W -Wall -Wno-unused-parameter -Wuninitialized -Wredundant-decls"
-else
-    CFLAGS="$CFLAGS -W -Wall"
+    CFLAGS="$CFLAGS -Wno-unused-parameter -Wredundant-decls"
 fi
 
 if test x$enable_Werror = xyes; then
