--- a/configure.in
+++ b/configure.in
@@ -102,10 +102,24 @@ AC_CACHE_CHECK([whether -falign-loops works], [falign_loop_flag], [
 ])
  
 # Checking for compiler warning options
-AC_CACHE_CHECK([whether -Wuninitialized and friends work], [uninitialized], [
+AC_CACHE_CHECK([whether -Wuninitialized works], [uninitialized], [
   saved_CPPFLAGS="$CPPFLAGS"
   CPPFLAGS="-Wuninitialized"
   AC_TRY_COMPILE(, , [uninitialized=yes], [uninitialized=no])
+  CPPFLAGS="$saved_CPPFLAGS"
+])
+ 
+AC_CACHE_CHECK([whether -Wno-unused-parameter works], [no_unused_parameter], [
+  saved_CPPFLAGS="$CPPFLAGS"
+  CPPFLAGS="-Wno-unused-parameter"
+  AC_TRY_COMPILE(, , [no_unused_parameter=yes], [no_unused_parameter=no])
+  CPPFLAGS="$saved_CPPFLAGS"
+])
+ 
+AC_CACHE_CHECK([whether -Wredundant-decls works], [redundant_decls], [
+  saved_CPPFLAGS="$CPPFLAGS"
+  CPPFLAGS="-Wredundant-decls"
+  AC_TRY_COMPILE(, , [redundant_decls=yes], [redundant_decls=no])
   CPPFLAGS="$saved_CPPFLAGS"
 ])
  
@@ -169,8 +183,12 @@ else
     fi
 fi
 
-if test "x$uninitialized" = xyes; then
-    CFLAGS="$CFLAGS -Wno-unused-parameter -Wredundant-decls"
+if test "x$no_unused_parameter" = xyes; then
+    CFLAGS="$CFLAGS -Wno-unused-parameter"
+fi
+
+if test "x$redundant_decls" = xyes; then
+    CFLAGS="$CFLAGS -Wredundant-decls"
 fi
 
 if test x$enable_Werror = xyes; then
