--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS         = src include
 
 EXTRA_DIST	= AUTHORS COPYING TODO NEWS BUGS README CREDITS THANKS \
-		  libaal.m4 ltconfig
+		  libaal.spec.in libaal.spec libaal.m4 ltconfig
 
 aclocaldir 	= $(datadir)/aclocal
 aclocal_DATA	= libaal.m4
@@ -10,5 +10,5 @@ define all-sources
 	( find ./ -name '*.[ch]' -print | grep -v SCCS )
 endef
 
-TAGS:
+ETAGS:
 	$(all-sources) | etags -
