--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS         = src include
 
 EXTRA_DIST	= AUTHORS COPYING TODO NEWS BUGS README CREDITS THANKS \
-		  libaal.spec.in libaal.spec libaal.m4
+		  libaal.spec.in libaal.spec libaal.m4 depcomp
 
 aclocaldir 	= $(datadir)/aclocal
 aclocal_DATA	= libaal.m4
