--- a/configure.in
+++ b/configure.in
@@ -12,9 +12,9 @@ AH_TEMPLATE([loff_t], [Define to loff_t])
 AH_TEMPLATE([ENABLE_DEBUG], [Define for enable debug info.])
 AH_TEMPLATE([ENABLE_MEMORY_MANAGER], [Define for enable simple memory manager.])
 
-LIBAAL_MAJOR_VERSION=0
-LIBAAL_MINOR_VERSION=5
-LIBAAL_MICRO_VERSION=3
+LIBAAL_MAJOR_VERSION=1
+LIBAAL_MINOR_VERSION=0
+LIBAAL_MICRO_VERSION=0
 
 LIBAAL_INTERFACE_AGE=0
 LIBAAL_BINARY_AGE=0
@@ -123,7 +123,7 @@ AC_CACHE_CHECK([whether -Wredundant-decls works], [redundant_decls], [
 if test "x$falign_loop_flag" = xyes; then
   ALIGN_FLAGS="-falign-jumps=1 -falign-loops=1 -falign-functions=1 -falign-labels=1 -fomit-frame-pointer -fno-inline -fstrength-reduce"
 else
-  ALIGN_FLAGS="-malign-jumps=1 -malign-loops=1 -malign-functions=1 -malign-labels=1 -momit-frame-pointer -mno-inline -mstrength-reduce"
+  ALIGN_FLAGS="-malign-jumps=1 -malign-loops=1 -malign-functions=1"
 fi
 
 CFLAGS=""
