--- a/libaal.spec.in
+++ b/libaal.spec.in
@@ -53,7 +53,7 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(-,root,root)
 %doc AUTHORS BUGS COPYING CREDITS INSTALL NEWS README THANKS TODO
-%{_libdir}/libaal-0.5.so.*
+%{_libdir}/libaal-1.0.so.*
 %{_libdir}/libaal-alone.so.*
 
 %files devel
@@ -67,6 +67,8 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/aclocal/libaal.m4
 
 %changelog
+* Sat Aug 14 2004 neeo <neeo@irc.pl>
+- Small update for 1.0
 * Fri Aug 29 2003 Yury V Umanets <umka@namesys.com>
 - Different cleanups in this spec file
 * Wed Aug 27 2003 David T Hollis <dhollis@davehollis.com>
