--- a/configure.in
+++ b/configure.in
@@ -14,11 +14,11 @@ AH_TEMPLATE([ENABLE_MEMORY_MANAGER], [Define for enable simple memory manager.])
 
 LIBAAL_MAJOR_VERSION=1
 LIBAAL_MINOR_VERSION=0
-LIBAAL_MICRO_VERSION=1
+LIBAAL_MICRO_VERSION=2
 
 LIBAAL_INTERFACE_AGE=0
 LIBAAL_BINARY_AGE=0
-LIBAAL_VERSION=$LIBAAL_MAJOR_VERSION.$LIBAAL_MINOR_VERSION.$LIBAAL_MICRO_VERSION
+LIBAAL_VERSION=$LIBAAL_MAJOR_VERSION.$LIBAAL_MINOR_VERSION.$LIBAAL_MICRO_VERSION-pre1
 
 LT_RELEASE=$LIBAAL_MAJOR_VERSION.$LIBAAL_MINOR_VERSION
 
