--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,13 +4,13 @@ libaal_sources  	 = device.c file.c exception.c list.c malloc.c \
 			   print.c string.c math.c debug.c bitops.c \
 			   gauge.c block.c ui.c stream.c hash.c libaal.c
 
-if ENABLE_STAND_ALONE
-ALONE_LIBS               = libaal-alone.la 
+if ENABLE_MINIMAL
+MINIMAL_LIBS               = libaal-minimal.la 
 else
-ALONE_LIBS               = 
+MINIMAL_LIBS               = 
 endif
 
-lib_LTLIBRARIES		 = libaal.la $(ALONE_LIBS)
+lib_LTLIBRARIES		 = libaal.la $(MINIMAL_LIBS)
 
 libaal_la_LDFLAGS 	 = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 			   -release $(LT_RELEASE)
@@ -19,9 +19,9 @@ libaal_la_SOURCES  	 = $(libaal_sources)
 
 libaal_la_CFLAGS         = @GENERIC_CFLAGS@
 
-if ENABLE_STAND_ALONE
-libaal_alone_la_SOURCES  = $(libaal_sources)
-libaal_alone_la_CFLAGS   = @ALONE_CFLAGS@
+if ENABLE_MINIMAL
+libaal_minimal_la_SOURCES  = $(libaal_sources)
+libaal_minimal_la_CFLAGS   = @MINIMAL_CFLAGS@
 endif
 
 INCLUDES = $(aalincludedir)
