--- a/configure.in
+++ b/configure.in
@@ -56,8 +56,8 @@ AC_ARG_ENABLE(debug,
 )
 
 AC_ARG_ENABLE(libminimal,
-    [  --enable-libminimal           enable building of minimal footprint library], ,
-        enable_libminimal=no
+    [  --disable-libminimal           enable building of minimal footprint library], ,
+        enable_libminimal=yes
 )
 
 AC_ARG_ENABLE(memory_manager,
