--- a/configure.in
+++ b/configure.in
@@ -56,7 +56,7 @@ AC_ARG_ENABLE(debug,
 )
 
 AC_ARG_ENABLE(libminimal,
-    [  --disable-libminimal           enable building of minimal footprint library], ,
+    [  --disable-libminimal          disable building of minimal footprint library], ,
         enable_libminimal=yes
 )
 
