--- a/configure.in
+++ b/configure.in
@@ -73,7 +73,6 @@ AC_PROG_CC
 # Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS([errno.h fcntl.h stdlib.h string.h sys/ioctl.h unistd.h])
-AC_CHECK_HEADERS([asm/unaligned.h])i
 
 AC_C_BIGENDIAN
 
@@ -137,9 +136,12 @@ GENERIC_CFLAGS=""
 GENERIC_CFLAGS="$GENERIC_CFLAGS -D_REENTRANT"
 
 AC_SYS_LARGEFILE
-if test x${ac_cv_sys_file_offset_bits} != x; then
-	GENERIC_CFLAGS="$GENERIC_CFLAGS -D_FILE_OFFSET_BITS=${ac_cv_sys_file_offset_bits}"
+if test -z "${ac_cv_sys_file_offset_bits}"; then
+	AC_MSG_WARN(Can't detect right _FILE_OFFSET_BITS. Will be forced to 64bit.)
+	ac_cv_sys_file_offset_bits=64
 fi
+
+GENERIC_CFLAGS="$GENERIC_CFLAGS -D_FILE_OFFSET_BITS=${ac_cv_sys_file_offset_bits}"
 
 AC_CHECK_SIZEOF(off_t, 64, [
 	#include <stdio.h>
