libaal: Fix configure warnings
Fixes the following configure warnings (seen on Debian/stable)

* Makefile.am:16: warning: all-sources: non-POSIX variable name
* aclocal: warning: autoconf input should be named 'configure.ac', not 'configure.in'
* src/Makefile.am:27: warning: 'INCLUDES' is the old name for 'AM_CPPFLAGS' (or '*_CPPFLAGS')
* suspicious cache-id, must contain _cv_ to be cached
* No need for Bash in prepare, run-ldconfig
* Fixed bashism in ./run-ldconfig
  > possible bashism in run-ldconfig line 8 (should be >word 2>&1):
  >   which ldconfig 2>&1>/dev/null;

Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,12 +6,12 @@ EXTRA_DIST	= AUTHORS COPYING TODO NEWS BUGS README CREDITS THANKS \
 aclocaldir 	= $(datadir)/aclocal
 aclocal_DATA	= libaal.m4
 
-define all-sources
+define all_sources
 	( find ./ -name '*.[ch]' -print | grep -v SCCS )
 endef
 
 ETAGS:
-	$(all-sources) | etags -
+	$(all_sources) | etags -
 
 install-exec-hook:
 	./run-ldconfig $(libdir)
